tests/rspack-test/configCases/errors/stack-overflow/errors.js
module.exports = [
	[/Maximum call stack size exceeded/,/caused by plugins in Compilation\.hooks\.processAssets/,/stack-overflow/],
];

